2006-02-07  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t: clone the entire perlmod/ to an
	accessible location.

2005-09-05  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* spec2struct.t: New tests for spec2struct and spec2string functions.

2005-04-25  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t: more platform-portable `mktemp`

2005-01-11  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t: execute() may fork a process that needs
	to find Services.pm, so make a copy of that file that is
	guaranteed to be readable by "nobody".

2005-01-5  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t: delete expected tempfile.

2004-12-30  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t: rework a test to avoid using "touch" on
	a dir.

2004-12-30  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t: OS X 10.2 (perl 5.6.0) portability fix:
	use /usr/bin/mktemp instead of File::Temp.

2004-12-30  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t: Don't use Test tests for test-suite
	prereqs. Fix tempdir sanity-check bail-out. More output-hiding
	adjustments.

2004-12-28  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t: Specify /usr/bin/touch since binutils'
	can't touch directories. Don't hide output of tests that should be
	silent.

2004-12-28  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t: Majorly reworked for new execute().

2004-12-22  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t: Explicitly use correct perl interp

2004-12-22  Daniel Macks  <dmacks@netspace.org>

	* prepare_script.t: Improved test for blank line removal.

2004-12-21  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t: Lots of cleanups. Add TODO test for not
	script not running in setuid mode.

2004-12-21  Daniel Macks  <dmacks@netspace.org>

	* execute_nonroot_okay.t: execute_nonroot_okay() wrapper merged